treim오류 수정, 템플릿 일부 변경

--- a/samm/src/main/resources/templates/index.html
+++ b/samm/src/main/resources/templates/index.html
@@ -60,8 +60,7 @@
 	<!-- END nav -->
 
 	<!-- main center page -->
-	<div id="main--screen" th:insert="${center} ? ${center} : center"
-		class="hero-wrap hero-wrap-2 js-fullheight"></div>
+	<div id="main--screen" th:insert="${center} ? ${center} : center"></div>
 
 
 	<footer class="ftco-footer bg-bottom ftco-no-pt" id="footer--screen"
