--- a/samm/src/main/resources/static/css/style.css
+++ b/samm/src/main/resources/static/css/style.css
@@ -133,19 +133,14 @@ sup {
   top: -.5em; }
 
 a {
-  color: #007bff;
+  color:#6c757d;
   text-decoration: none;
   background-color: transparent; }
   a:hover {
     color: #0056b3;
     text-decoration: underline; }
 
-a:not([href]) {
-  color: inherit;
-  text-decoration: none; }
-  a:not([href]):hover {
-    color: inherit;
-    text-decoration: none; }
+
 
 pre,
 code,
@@ -8360,7 +8355,7 @@ a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-  color: #f15d30; }
+  }
   a:hover, a:focus {
     text-decoration: none;
     color: #f15d30;
@@ -9136,9 +9131,7 @@ textarea.form-control {
       padding-top: 5em;
       padding-bottom: 5em; } }
 
-.ftco-animate {
-  opacity: 0;
-  visibility: hidden; }
+
 
 .bg-primary {
   background: #f15d30 !important; }
@@ -9195,6 +9188,16 @@ textarea.form-control {
   @media (max-width: 767.98px) {
     .ftco-section {
       padding: 6em 0; } }
+      
+ .ftco-section2 {
+	padding: 4em 0;
+	position: relative;
+	width: 100%; }
+	@media ( max-width : 767.98px) {
+	.ftco-section2 {
+		padding: 6em 0;
+	}
+	}     
 
 .ftco-no-pt {
   padding-top: 0 !important; }
