축제정보 contentid 추가

--- a/samm/src/main/resources/templates/center.html
+++ b/samm/src/main/resources/templates/center.html
@@ -45,7 +45,7 @@
 							th:text="${list['eventstartdate']}"></span> ~ <span
 							th:text="${list['eventenddate']}"></span></span>
 						<h3>
-							<a href="#" th:text="${list['title']}">Banaue Rice Terraces</a>
+							<a href="#" th:text="${list['title']}"><input name="contentid" hidden th:value="${list['contentid']}">Banaue Rice Terraces</a>
 						</h3>
 						<p class="location">
 							<span class="fa fa-map-marker"></span><span
