--- a/samm/src/main/resources/templates/index.html
+++ b/samm/src/main/resources/templates/index.html
@@ -52,7 +52,7 @@
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
 					<li class="nav-item"><a href="/about" class="nav-link">About</a></li>
-					<li class="nav-item"><a href="/searchfestival"
+					<li class="nav-item"><a href="/map"
 						class="nav-link">Festival</a></li>
 					<li class="nav-item"><a href="blog.html" class="nav-link">Board</a></li>
 					<li class="nav-item"><a href="contact.html" class="nav-link">Login</a></li>
