--- a/samm/src/main/resources/templates/map.html
+++ b/samm/src/main/resources/templates/map.html
@@ -70,8 +70,16 @@
 		</div>
 	</nav>
 
-	<div class="map-paintting" id="map">
-	
+	<div class="map-paintting">
+		<div id="map"></div>
+		<div id="map-searchbox">
+			<form class="form-inline">
+				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+			</form>
+		</div>
 	</div>
+	
+
 	<script src="/js/map.js"></script>
 </body>
