--- a/samm/src/main/resources/templates/sandbox.html
+++ b/samm/src/main/resources/templates/sandbox.html
@@ -83,9 +83,16 @@
 					</div>
 				</div>
 				<div class="mt-2"></div>
-				<div>
-					<div>남산봉수</div>
-					<div></div>
+
+				<div container="l-card container">
+					<a href="#">
+						<div class="l-card-ongoing">진행중</div>
+						<div class="l-card-title">남산봉수</div>
+						<div class="l-card-class">축제</div>
+						<div class="l-card-period"><span>19721121</span>~<span>20221022</span></div>
+						<div class="l-card-loc">서울</div>
+						<img class="l-card-pic" src=""></img>
+					</a>
 				</div>
 			</form>
 		</div>
