--- a/samm/src/main/resources/templates/center.html
+++ b/samm/src/main/resources/templates/center.html
@@ -49,7 +49,7 @@
 						</h3>
 						<p class="location">
 							<span class="fa fa-map-marker"></span><span
-								th:text="${list.address1}"></span>
+								th:text="${list.addr1}"></span>
 						</p>
 						<!--
  						<ul>
