--- a/samm/src/main/resources/static/css/festival.css
+++ b/samm/src/main/resources/static/css/festival.css
@@ -52,7 +52,7 @@
 	background-size: cover;
 	background-position: center center;
 	padding: 15px;
-	width: 20rem;
+	width: 25rem;
 }
 
 .s003 form {
@@ -87,7 +87,7 @@
 	padding: 10px 32px;
 	font-size: 16px;
 	color: #555;
-	
+
 }
 
 .s003 form .inner-form .input-field input.placeholder {
@@ -264,4 +264,96 @@
 		margin-bottom: 0;
 		width: 100%;
 	}
+
+
+}
+
+.s003 .l-card {
+	width: 100%;
+	max-width: 790px;
+	margin-bottom: 0;
+
+	background: #fff;
+	display: -ms-flexbox;
+	display: flex;
+	width: 100%;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
+	-ms-flex-align: center;
+	align-items: center;
+	box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
+	border-radius: 0;
+}
+
+.s003 .l-card-left {
+	margin: 0;
+	padding: 0;
+}
+
+.s003 .l-card-right {
+	margin: 0;
+	padding: 0 0 0 15px;
+}
+
+.s003 .l-card-firstimage {
+	max-width: 85px;
+}
+
+
+
+.s003 .l-card-txt.title {
+	color: rgb(0, 0, 0);
+	font-family: "Poppins", Arial, sans-serif;
+	font-size: 16px;
+	font-weight: 600;
+}
+
+
+
+.s003 .l-card-txt.location {
+	color: #999999;
+	font-family: "Poppins", Arial, sans-serif;
+	font-size: 13px;
+	line-height: 1.8;
+	font-weight: 400;
+	text-align: left;
+}
+
+.s003 .inline {
+
+}
+
+.s003 .inline:after {
+	clear: both;
+	display: block;
+	content: ''
+}
+
+.s003 .l-card-txt.dbtable {
+	background-color: white;
+	color: rgb(0, 0, 0);
+	font-family: "Poppins", Arial, sans-serif;
+	font-size: 13px;
+	font-weight: 600;
+	float: left;
+	display: inline;
+	margin-left: 2px;
+}
+.s003 .l-card-txt.ongoing {
+	color: white;
+	background-color: rgb(241, 93, 48);;
+	font-family: "Poppins", Arial, sans-serif;
+	font-size: 13px;
+	font-weight: 400;
+	float: left;
+	display: inline
+}
+
+.s003 .l-card-txt.days {
+	color: rgb(241, 93, 48);
+	font-family: "Poppins", Arial, sans-serif;
+	font-size: 13px;
+	font-weight: 600;
+	float: right;
+	display: inline
 }
