--- a/samm/src/main/resources/static/css/style.css
+++ b/samm/src/main/resources/static/css/style.css
@@ -133,7 +133,7 @@ sup {
   top: -.5em; }
 
 a {
-  color:#6c757d;
+  color:inherit;
   text-decoration: none;
   background-color: transparent; }
   a:hover {
