--- a/samm/src/main/resources/static/css/festival.css
+++ b/samm/src/main/resources/static/css/festival.css
@@ -264,19 +264,21 @@
 		margin-bottom: 0;
 		width: 100%;
 	}
+}
 
-
+.s003 #map-searchlist {
+	width: 100%;
+	max-width: 790px;
+	margin: 0;
+	padding: 0;
+	overflow-y: auto;
 }
 
 .s003 .l-card {
-	width: 100%;
-	max-width: 790px;
 	margin-bottom: 0;
-
 	background: #fff;
 	display: -ms-flexbox;
 	display: flex;
-	width: 100%;
 	-ms-flex-pack: justify;
 	justify-content: space-between;
 	-ms-flex-align: center;
@@ -285,30 +287,47 @@
 	border-radius: 0;
 }
 
+
+
 .s003 .l-card-left {
 	margin: 0;
 	padding: 0;
+	position: relative;
+    width: 85px;
+    height: 70px;
+	overflow: hidden;
 }
 
 .s003 .l-card-right {
 	margin: 0;
-	padding: 0 0 0 15px;
+	padding: 5px 0 5px 15px;
+}
+
+.s003 .l-card-noimage {
+	margin: 0;
+	padding: 5px 0 5px;
 }
 
 .s003 .l-card-firstimage {
-	max-width: 85px;
+	position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(50, 50);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin: auto;
 }
-
-
 
 .s003 .l-card-txt.title {
 	color: rgb(0, 0, 0);
 	font-family: "Poppins", Arial, sans-serif;
 	font-size: 16px;
 	font-weight: 600;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
-
-
 
 .s003 .l-card-txt.location {
 	color: #999999;
@@ -317,11 +336,13 @@
 	line-height: 1.8;
 	font-weight: 400;
 	text-align: left;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	margin-left: 1px;
 }
 
-.s003 .inline {
-
-}
+.s003 .inline {}
 
 .s003 .inline:after {
 	clear: both;
@@ -337,11 +358,12 @@
 	font-weight: 600;
 	float: left;
 	display: inline;
-	margin-left: 2px;
+	margin-left: 1px;
 }
+
 .s003 .l-card-txt.ongoing {
 	color: white;
-	background-color: rgb(241, 93, 48);;
+	background-color: rgb(241, 93, 48);
 	font-family: "Poppins", Arial, sans-serif;
 	font-size: 13px;
 	font-weight: 400;
