--- a/samm/src/main/resources/templates/festival/detail.html
+++ b/samm/src/main/resources/templates/festival/detail.html
@@ -1,111 +1,216 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<title>Pacific - Free Bootstrap 4 Template by Colorlib</title>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<head>
+<!-- kakamap javascript -->
+<script type="text/javascript"
+	src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1f0d8b55d9f1a8931df0a3ae663baf4e"></script>
+<script type="text/javascript"
+	src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1f0d8b55d9f1a8931df0a3ae663baf4e&libraries=LIBRARY"></script>
+<script type="text/javascript"
+	src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1f0d8b55d9f1a8931df0a3ae663baf4e&libraries=services"></script>
+<script type="text/javascript"
+	src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1f0d8b55d9f1a8931df0a3ae663baf4e&libraries=services,clusterer,drawing"></script>
 
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script
-	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
-
-<link
-	href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900"
-	rel="stylesheet">
-<link
-	href="https://fonts.googleapis.com/css2?family=Arizonia&display=swap"
-	rel="stylesheet">
-
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet"
-	href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
-
-<link rel="stylesheet" href="/css/animate.css">
-
-<link rel="stylesheet" href="/css/owl.carousel.min.css">
-<link rel="stylesheet" href="/css/owl.theme.default.min.css">
-<link rel="stylesheet" href="/css/magnific-popup.css">
-
-<link rel="stylesheet" href="/css/bootstrap-datepicker.css">
-<link rel="stylesheet" href="/css/jquery.timepicker.css">
-
-
-<link rel="stylesheet" href="/css/flaticon.css">
-<link rel="stylesheet" href="/css/style.css">
-<link rel="stylesheet" href="/css/festival.css">
 <link rel="stylesheet" href="/css/detail.css">
-</head>
-
-
-
-<body>
-	<nav
-		class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light scrolled awake">
-		<div class="container">
-			<a class="navbar-brand" href="/">Pacific<span>Travel
-					Agency</span></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse"
-				data-target="#ftco-nav" aria-controls="ftco-nav"
-				aria-expanded="false" aria-label="Toggle navigation">
-				<span class="oi oi-menu"></span> Menu
-			</button>
-
-			<div class="collapse navbar-collapse" id="ftco-nav">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
-					<li class="nav-item"><a href="/about" class="nav-link">About</a></li>
-					<li class="nav-item"><a href="/map" class="nav-link">Festival</a></li>
-					<li class="nav-item"><a href="blog.html" class="nav-link">Board</a></li>
-					<li class="nav-item"><a href="contact.html" class="nav-link">Login</a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-
-
-	<div class="container-fluid text-center detailMain">
-		<div class="content">
-			<div class="col-sm-3 sidenav text-left">
-				<h1 class="festival-title" th:text="${festival.title}">Festival Name</h1>
-				<h3 class="festival-period"><span th:text="${festival.eventstartdate}+' ~ '+${festival.eventenddate}"></span></h3>
-				<p class="festival--side-nav dactive">
-					<a href="#" id="common">축제 이야기</a>
+<section class="hero-wrap hero-wrap-2 js-fullheight"
+	th:style="'background-image:url('+@{${festival.firstimage}}+');'">
+	<div class="overlay"></div>
+	<div class="container">
+		<div
+			class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
+			<div class="col-md-9 ftco-animate pb-5 text-center">
+				<p class="breadcrumbs">
+					<span class="mr-2"><a href="/">Home <i
+							class="fa fa-chevron-right"></i></a></span> <span>Festival Detail<i
+						class="fa fa-chevron-right"></i></span>
 				</p>
-				<p class="festival--side-nav">
-					<a href="#" id="photo">축제 사진</a>
-				</p>
-				<p class="festival--side-nav">
-					<a href="#" id="info">축제 정보</a>
-				</p >
-				<p class="festival--side-nav">
-					<a href="#" id="review">축제 리뷰</a>
-				</p>
+				<h1 class="mb-0 bread" th:utext="${festival.title}">About Us</h1>
 			</div>
-			<div class="col-sm-9 text-left dcenter" th:insert="${dcenter} ? ${dcenter} : dcenter" >
-			</div>
-
 		</div>
 	</div>
+</section>
+
+<!-- 상세 header -->
+<section class="detail-header ftco-section2 container">
+	<div class="festival-ing">
+		<span>진행중</span>
+		<!-- thif 구문 사용.... 현재 날짜 가져와서 축제 날짜와 비교.. -->
+	</div>
+	<div class="detail-title">
+		<h1 th:utext="${festival.title}"></h1>
+	</div>
+	<div class="detail-basicInfo">
+		<span th:text="${festival.addr1}"></span> <span
+			th:text="${festival.eventstartdate}+' ~ '+${festival.eventenddate}"></span>
+	</div>
+	<div class="detail-icon">
+		<span class="heart"><i class="bi bi-heart"></i></span> <span
+			class="share"><i class="bi bi-share"></i></span>
+	</div>
+	<div>
+		<span class="header--info" th:utext="${info['infotext']}"></span>
+	</div>
+</section>
+<!-- 상세 NAV -->
+<section
+	class="ftco-section2 container navbar navbar-expand-lg detail-navbar">
+	<div class="detail-tab">
+		<ul class="navbar-nav ml-auto">
+			<li class="nav-item"><a href="#" class="nav-link">사진보기</a></li>
+			<li class="nav-item"><a href="#" class="nav-link">상세정보</a></li>
+			<li class="nav-item"><a href="#" class="nav-link">축제톡</a></li>
+		</ul>
+	</div>
+</section>
+<!-- 상세 사진 section -->
+<section class="ftco-section2 container">
+	<div>
+		<h2>
+			<a>사진등록하기</a>
+		</h2>
+	</div>
+	<div id="carouselExampleIndicators" class="carousel slide"
+		data-bs-ride="carousel">
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img src="/images/bg_2.jpg" class="d-block w-100" alt="...">
+			</div>
+			<div class="carousel-item">
+				<img src="/images/bg_1.jpg" class="d-block w-100" alt="...">
+			</div>
+			<div class="carousel-item">
+				<img src="/images/bg_4.jpg" class="d-block w-100" alt="...">
+			</div>
+		</div>
+		<button class="carousel-control-prev" type="button"
+			data-bs-target="#carouselExampleIndicators" data-bs-slide="prev"
+			id="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span> <span
+				class="visually-hidden">Previous</span>
+		</button>
+		<button class="carousel-control-next" type="button"
+			data-bs-target="#carouselExampleIndicators" data-bs-slide="next"
+			id="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span> <span
+				class="visually-hidden">Next</span>
+		</button>
+	</div>
+</section>
+
+<!-- 상세정보 개요, 지도, 행사정보.... -->
+
+<section class="ftco-section2 container">
+	<h1>상세정보</h1>
+	<div>
+		<span th:utext="${common['overview']}"></span>
+		<button id="moreInfo">더보기</button>
+	</div>
+	<div class="infoDetail hidden">
+		<h3 th:utext="${info['infoname']}"></h3>
+		<span th:utext="${info[infotext]}"></span>
+		<h3 th:utext="${info['infoname2']}"></h3>
+		<span th:utext="${info[infotext2]}"></span>
+	</div>
+	<div id="dmap"></div>
+	<input hidden th:value="${festival.mapx}" id="lon"> <input
+		hidden th:value="${festival.mapy}" id="lat">
+	<div>
+		<ul>
+			<li><strong>시작일</strong> <span
+				th:utext="${#temporals.createDate(intro['eventstartdate'],'yyyyMMdd')}"></span>
+				<strong></strong></li>
+			<li><strong>종료일</strong><span
+				th:utext="${#temporals.createDate(intro['eventenddate'],'yyyyMMdd')}"></span></li>
+			<li><strong>전화번호</strong><span th:utext="${festival.tel}"></span></li>
+			<li><strong>홈페이지</strong><span th:utext="${common['homepage']}"></span></li>
+			<li><strong>주소</strong><span th:utext="${festival.addr1}"></span></li>
+			<li><strong>행사장소</strong><span th:utext="${intro['eventplace']}"></span></li>
+			<li><strong>주최</strong><span th:utext="${intro['sponsor1']}"></span></li>
+			<li><strong>주관</strong><span th:utext="${intro['sponsor2']}"></span></li>
+			<li><strong>행사기간</strong><span th:utext="${intro['playtime']}"></span></li>
+			<li><strong>행사요금</strong><span
+				th:utext="${intro['usetimefestival']}"></span></li>
+		</ul>
+	</div>
+</section>
+<!-- 축제리뷰.. -->
+<section class="ftco-section2 container">
+
+        <div class="pt-5 mt-5">
+          <h3 class="mb-5" style="font-size: 20px; font-weight: bold;">6 Comments</h3>
+          <ul class="comment-list">
+            <li class="comment">
+              <div class="vcard bio">
+                <img src="images/person_1.jpg" alt="Image placeholder">
+              </div>
+              <div class="comment-body">
+                <h3>John Doe</h3>
+                <div class="meta">September 11, 2020 at 2:21pm</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                <p><a href="#" class="reply">Reply</a></p>
+              </div>
+            </li>
+
+            <li class="comment">
+              <div class="vcard bio">
+                <img src="images/person_1.jpg" alt="Image placeholder">
+              </div>
+              <div class="comment-body">
+                <h3>John Doe</h3>
+                <div class="meta">September 11, 2020 at 2:21pm</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                <p><a href="#" class="reply">Reply</a></p>
+              </div>
+
+              <ul class="children">
+                <li class="comment">
+                  <div class="vcard bio">
+                    <img src="images/person_1.jpg" alt="Image placeholder">
+                  </div>
+                  <div class="comment-body">
+                    <h3>John Doe</h3>
+                    <div class="meta">September 11, 2020 at 2:21pm</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                    <p><a href="#" class="reply">Reply</a></p>
+                  </div>
+                </li>
+              </ul>
+            </li>
+
+            <li class="comment">
+              <div class="vcard bio">
+                <img src="images/person_1.jpg" alt="Image placeholder">
+              </div>
+              <div class="comment-body">
+                <h3>John Doe</h3>
+                <div class="meta">September 11, 2020 at 2:21pm</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                <p><a href="#" class="reply">Reply</a></p>
+              </div>
+            </li>
+          </ul>
+          <!-- END comment-list -->
+          
+          <div class="comment-form-wrap pt-5">
+            <h3 class="mb-5" style="font-size: 20px; font-weight: bold;">Leave a comment</h3>
+            <form action="#" class="p-5 bg-light">
+              <div class="form-group">
+                <label for="name">Name *</label>
+                <input type="text" class="form-control" id="name">
+              </div>
+
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea name="" id="message" cols="30" rows="10" class="form-control"></textarea>
+              </div>
+              <div class="form-group">
+                <input type="submit" value="Post Comment" class="btn py-3 px-4 btn-primary">
+              </div>
+
+            </form>
+          </div>
+        </div>
+</section>
 
 
-	<script src="/js/festival.js"></script>
-	<script src="/js/jquery.min.js"></script>
-	<script src="/js/jquery-migrate-3.0.1.min.js"></script>
-	<script src="/js/popper.min.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
-	<script src="/js/jquery.easing.1.3.js"></script>
-	<script src="/js/jquery.waypoints.min.js"></script>
-	<script src="/js/jquery.stellar.min.js"></script>
-	<script src="/js/owl.carousel.min.js"></script>
-	<script src="/js/jquery.magnific-popup.min.js"></script>
-	<script src="/js/jquery.animateNumber.min.js"></script>
-	<script src="/js/bootstrap-datepicker.js"></script>
-	<script src="/js/scrollax.min.js"></script>
-	<script src="/js/main.js"></script>
-</body>
+
+
+<script src="/js/festival.js"></script>
