축제 상세 사진등록제외 기능 완료

--- a/samm/src/main/resources/static/css/detail.css
+++ b/samm/src/main/resources/static/css/detail.css
@@ -51,3 +51,12 @@
 	text-align: center;
 	
 }
+
+.review-star{
+	font-size: 1.2em;
+	border-color: #fd7e14;
+}
+.fa-star:hover {
+	cursor: pointer;
+}
+
