--- a/samm/src/main/resources/templates/festival/detail.html
+++ b/samm/src/main/resources/templates/festival/detail.html
@@ -134,80 +134,63 @@
 <!-- 축제리뷰.. -->
 <section class="ftco-section2 container">
 
-        <div class="pt-5 mt-5">
-          <h3 class="mb-5" style="font-size: 20px; font-weight: bold;">6 Comments</h3>
-          <ul class="comment-list">
-            <li class="comment">
-              <div class="vcard bio">
-                <img src="images/person_1.jpg" alt="Image placeholder">
-              </div>
-              <div class="comment-body">
-                <h3>John Doe</h3>
-                <div class="meta">September 11, 2020 at 2:21pm</div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                <p><a href="#" class="reply">Reply</a></p>
-              </div>
-            </li>
+	<div class="pt-5 mt-5">
+		<h3 class="mb-5" style="font-size: 20px; font-weight: bold;"><span th:text="${rcount}"></span>
+			Comments</h3>
+		<ul class="comment-list">
+			<li class="comment" th:each="review:${review}">
+				<div class="vcard bio">
+					<img src="images/person_1.jpg" alt="Image placeholder">
+				</div>
+				<div class="comment-body">
+					<h3 th:text="${review.uid}">John Doe</h3>
+					<div class="meta" th:text="${review.regdate}">September 11, 2020 at 2:21pm</div>
+					<p th:text="${review.contents}">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+						Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem,
+						eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas
+						earum impedit necessitatibus, nihil?</p>
+					<p>
+						<a href="" class="reply">Delete</a>
+					</p>
+				</div>
+			</li>
 
-            <li class="comment">
-              <div class="vcard bio">
-                <img src="images/person_1.jpg" alt="Image placeholder">
-              </div>
-              <div class="comment-body">
-                <h3>John Doe</h3>
-                <div class="meta">September 11, 2020 at 2:21pm</div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                <p><a href="#" class="reply">Reply</a></p>
-              </div>
+			
+		</ul>
+		<!-- END comment-list -->
 
-              <ul class="children">
-                <li class="comment">
-                  <div class="vcard bio">
-                    <img src="images/person_1.jpg" alt="Image placeholder">
-                  </div>
-                  <div class="comment-body">
-                    <h3>John Doe</h3>
-                    <div class="meta">September 11, 2020 at 2:21pm</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                    <p><a href="#" class="reply">Reply</a></p>
-                  </div>
-                </li>
-              </ul>
-            </li>
+		<div class="comment-form-wrap pt-5">
+			<h3 class="mb-5" style="font-size: 20px; font-weight: bold;">Leave
+				a comment</h3>
+			<form id="festival--review" class="p-5 bg-light" name="review">
+				<div class="hidden-session" >
+					<input th:if="${session.loginuser} != null" class="form-control" name="uid" id="uid"
+						th:value="${session.loginuser.id}" hidden> <input
+						class="form-control" name="fid" id="fid" th:value="${festival.contentid}" hidden>
+				</div>
+				<div class="form-group">
+					<label for="star">Choose Star *</label> 
+					<input class="form-control" type="text" id="star" name="star" hidden>
+					<div>
+						<span class="fa fa-star 0"></span> <span class="fa fa-star 1"></span>
+						<span class="fa fa-star 2"></span> <span class="fa fa-star 3"></span>
+						<span class="fa fa-star 4"></span> <span id="star-warnig"></span>
+					</div>
+				</div>
 
-            <li class="comment">
-              <div class="vcard bio">
-                <img src="images/person_1.jpg" alt="Image placeholder">
-              </div>
-              <div class="comment-body">
-                <h3>John Doe</h3>
-                <div class="meta">September 11, 2020 at 2:21pm</div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                <p><a href="#" class="reply">Reply</a></p>
-              </div>
-            </li>
-          </ul>
-          <!-- END comment-list -->
-          
-          <div class="comment-form-wrap pt-5">
-            <h3 class="mb-5" style="font-size: 20px; font-weight: bold;">Leave a comment</h3>
-            <form action="#" class="p-5 bg-light">
-              <div class="form-group">
-                <label for="name">Name *</label>
-                <input type="text" class="form-control" id="name">
-              </div>
+				<div class="form-group">
+					<label for="contents">Message *(inner 1000words)</label>
+					<textarea name="contents" id="contents" cols="30" rows="10"
+						class="form-control"></textarea>
+				</div>
+				<div class="form-group">
+					<input type="button" id="sumbit-review" value="Post Comment"
+						class="btn py-3 px-4 btn-primary">
+				</div>
 
-              <div class="form-group">
-                <label for="message">Message</label>
-                <textarea name="" id="message" cols="30" rows="10" class="form-control"></textarea>
-              </div>
-              <div class="form-group">
-                <input type="submit" value="Post Comment" class="btn py-3 px-4 btn-primary">
-              </div>
-
-            </form>
-          </div>
-        </div>
+			</form>
+		</div>
+	</div>
 </section>
 
 
