축제 찾기 기능, 축제 디테일 변경

--- a/samm/src/main/resources/static/css/style.css
+++ b/samm/src/main/resources/static/css/style.css
@@ -8589,8 +8589,7 @@ h1, h2, h3, h4, h5,
   position: relative; }
   .slider-text .subheading {
     font-size: 30px;
-    color: #f15d30;
-    font-family: "Arizonia", cursive; }
+    color: #f15d30; }
   .slider-text h1 {
     font-size: 55px;
     color: #fff;
