--- a/samm/src/main/resources/templates/festival/detail.html
+++ b/samm/src/main/resources/templates/festival/detail.html
@@ -54,30 +54,27 @@
 	class="ftco-section2 container navbar navbar-expand-lg detail-navbar">
 	<div class="detail-tab">
 		<ul class="navbar-nav ml-auto">
-			<li class="nav-item"><a href="#menu1" class="nav-link" >사진보기</a></li>
-			<li class="nav-item"><a href="#menu2" class="nav-link" >상세정보</a></li>
-			<li class="nav-item"><a href="#menu3" class="nav-link" >축제톡</a></li>
+			<li class="nav-item"><a href="#menu1" class="nav-link">사진보기</a></li>
+			<li class="nav-item"><a href="#menu2" class="nav-link">상세정보</a></li>
+			<li class="nav-item"><a href="#menu3" class="nav-link">축제톡</a></li>
 		</ul>
 	</div>
 </section>
 <!-- 상세 사진 section -->
 <section class="ftco-section2 container" id="menu1">
-	<div>
-		<h2>
-			<a>사진요청하기</a>
-		</h2>
-	</div>
+	<form class="filebox" id="file-form">
+		<label for="file" id="label-file">사진요청하기</label><input type="file" id="file" name="mf"
+		onchange="filecheck()">
+		<input name="fid" th:value="${common['contentid']}" hidden>
+	</form>
 	<div id="carouselExampleIndicators" class="carousel slide"
 		data-bs-ride="carousel">
-		<div class="carousel-inner">
+		<div class="carousel-inner" >
 			<div class="carousel-item active">
-				<img src="/images/bg_2.jpg" class="d-block w-100" alt="...">
+				<img th:src="${common['firstimage']}" class="d-block w-100" alt="..." style="height:600px;" >
 			</div>
-			<div class="carousel-item">
-				<img src="/images/bg_1.jpg" class="d-block w-100" alt="...">
-			</div>
-			<div class="carousel-item">
-				<img src="/images/bg_4.jpg" class="d-block w-100" alt="...">
+			<div class="carousel-item" th:each="img:${img}" >
+				<img th:src="@{'/images/festival/'+${img.name}}" class="d-block w-100" alt="...">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button"
@@ -97,7 +94,7 @@
 
 <!-- 상세정보 개요, 지도, 행사정보.... -->
 
-<section class="ftco-section2 container"  id="menu2">
+<section class="ftco-section2 container" id="menu2">
 	<h1>상세정보</h1>
 	<div>
 		<span th:utext="${common['overview']}"></span>
@@ -135,8 +132,9 @@
 <section class="ftco-section2 container" id="menu3">
 
 	<div class="pt-5 mt-5">
-		<h3 class="mb-5" style="font-size: 20px; font-weight: bold;"><span th:text="${rcount}"></span>
-			Comments</h3>
+		<h3 class="mb-5" style="font-size: 20px; font-weight: bold;">
+			<span th:text="${rcount}"></span> Comments
+		</h3>
 		<ul class="comment-list">
 			<li class="comment" th:each="review:${review}">
 				<div class="vcard bio">
@@ -144,18 +142,20 @@
 				</div>
 				<div class="comment-body">
 					<h3 th:text="${review.uid}+' | '+${review.username}">John Doe</h3>
-					<div class="meta" th:text="${review.regdate}">September 11, 2020 at 2:21pm</div>
-					<p th:text="${review.contents}">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-						Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem,
-						eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas
-						earum impedit necessitatibus, nihil?</p>
+					<div class="meta" th:text="${review.regdate}">September 11,
+						2020 at 2:21pm</div>
+					<p th:text="${review.contents}">Lorem ipsum dolor sit amet,
+						consectetur adipisicing elit. Pariatur quidem laborum
+						necessitatibus, ipsam impedit vitae autem, eum officia, fugiat
+						saepe enim sapiente iste iure! Quam voluptas earum impedit
+						necessitatibus, nihil?</p>
 					<p>
 						<a href="" class="reply">Delete</a>
 					</p>
 				</div>
 			</li>
 
-			
+
 		</ul>
 		<!-- END comment-list -->
 
@@ -163,14 +163,15 @@
 			<h3 class="mb-5" style="font-size: 20px; font-weight: bold;">Leave
 				a comment</h3>
 			<form id="festival--review" class="p-5 bg-light" name="review">
-				<div class="hidden-session" >
-					<input th:if="${session.loginuser} != null" class="form-control" name="uid" id="uid"
-						th:value="${session.loginuser.id}" hidden> <input
-						class="form-control" name="fid" id="fid" th:value="${festival.contentid}" hidden>
+				<div class="hidden-session">
+					<input th:if="${session.loginuser} != null" class="form-control"
+						name="uid" id="uid" th:value="${session.loginuser.id}" hidden>
+					<input class="form-control" name="fid" id="fid"
+						th:value="${festival.contentid}" hidden>
 				</div>
 				<div class="form-group">
-					<label for="star">Choose Star *</label> 
-					<input class="form-control" type="text" id="star" name="star" hidden>
+					<label for="star">Choose Star *</label> <input class="form-control"
+						type="text" id="star" name="star" hidden>
 					<div>
 						<span class="fa fa-star 0"></span> <span class="fa fa-star 1"></span>
 						<span class="fa fa-star 2"></span> <span class="fa fa-star 3"></span>
