--- a/samm/src/main/resources/templates/map.html
+++ b/samm/src/main/resources/templates/map.html
@@ -77,6 +77,7 @@
 				<div class="inner-form">
 					<div class="input-field second-wrap">
 						<input name="search" type="text" placeholder="Enter Keywords?" />
+						<input type="text" style="display:none;">
 					</div>
 					<div class="input-field third-wrap">
 						<button class="btn-search" type="button">
@@ -91,24 +92,9 @@
 				</div>
 			</form>
 			<div class="mt-3"></div>
-			<div id="map-searchlist" th:replace="@{/map-frag/searchlist}">
+			<div id="map-searchlist" style="display:none;">
 			</div>
-			<div id="map-searchpager">
-				<div class="row mt-3">
-					<div class="col text-center">
-						<div class="block-27">
-							<ul>
-								<li><a href="#">&lt;</a></li>
-								<li class="active"><span>2</span></li>
-								<li><a href="#">2</a></li>
-								<li><a href="#">3</a></li>
-								<li><a href="#">4</a></li>
-								<li><a href="#">5</a></li>
-								<li><a href="#">&gt;</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
+			<div id="map-searchpager" style="display:none;">
 			</div>
 		</div>
 	</div>
