--- a/samm/src/main/resources/templates/login.html
+++ b/samm/src/main/resources/templates/login.html
@@ -44,8 +44,8 @@ $(document).ready(function(){
 						<div class="col-sm-offset-2 col-sm-10">
 							<button id="signin_bt" type="submit" class="btn btn-default">Sign In</button>
 							
-							
-							 <a href="/users/add">Sign Up</a> 
+							<button id="signup_bt" type="button" class="btn btn-default" onclick="location.href='/users/add'">Sign Up</button>
+							 
 						</div>
 					</div>
 				</form>
