--- a/samm/src/main/resources/templates/index.html
+++ b/samm/src/main/resources/templates/index.html
@@ -50,17 +50,17 @@
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
-					<li class="nav-item"><a href="/about" class="nav-link">About</a></li>
-					<li class="nav-item"><a href="/map"
+					<li class="nav-item active"><a href="/about" class="nav-link">About</a></li>
+					<li class="nav-item active"><a href="/map"
 						class="nav-link">Festival</a></li>
-					<li class="nav-item"><a href="blog.html" class="nav-link">Board</a></li>
+					<li class="nav-item active"><a href="/board" class="nav-link">Board</a></li>
 					
-					<li class="nav-item" th:if="${session.loginuser == null}"><a href="/login" class="nav-link">Sign In</a></li>
+					<li class="nav-item active" th:if="${session.loginuser == null}"><a href="/login" class="nav-link">Sign In</a></li>
 					
-					<li class="nav-item" th:unless="${session.loginuser == null}">
+					<li class="nav-item active" th:unless="${session.loginuser == null}">
 					<a href="/users/mypage" class="nav-link"><span class="nav-item"></span>My page</a>
 					
-					<li class="nav-item" th:unless="${session.loginuser == null}">
+					<li class="nav-item active" th:unless="${session.loginuser == null}">
 					<a href="/logout" class="nav-link"><span th:text="${session.loginuser.name}"></span><span class="nav-item"></span>Sign Out</a>
 					
 					
