main 배경화면 변경

--- a/samm/src/main/resources/templates/center.html
+++ b/samm/src/main/resources/templates/center.html
@@ -2,7 +2,7 @@
 <script src="js/area.js"></script>
 
 <div class="hero-wrap js-fullheight"
-	style="background-image: url('images/bg_5.jpg');">
+	style="background-image: url('images/festival1.jpg');">
 	<div class="overlay"></div>
 	<div class="container">
 		<div
