--- a/samm/src/main/resources/templates/festival/searchfestival.html
+++ b/samm/src/main/resources/templates/festival/searchfestival.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <script src="/js/search.js"></script>
 <section class="hero-wrap hero-wrap-2 js-fullheight"
-	style="background-image: url('images/bg_1.jpg');">
+	style="background-image: url('images/festival2.jpg');">
 	<div class="overlay"></div>
 	<div class="container">
 
