--- a/samm/src/main/resources/templates/test.html
+++ b/samm/src/main/resources/templates/test.html
@@ -1,6 +1,6 @@
 
 <section class="hero-wrap hero-wrap-2 js-fullheight"
-	style="background-image: url('images/bg_1.jpg');">
+	style="background-image: url('images/festival3.jpg');">
 	<div class="overlay"></div>
 	<div class="container">
 		<div
