--- a/samm/src/main/resources/templates/map.html
+++ b/samm/src/main/resources/templates/map.html
@@ -49,8 +49,7 @@
 	<nav
 		class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light scrolled awake">
 		<div class="container">
-			<a class="navbar-brand" href="/">Pacific<span>Travel
-					Agency</span></a>
+			<a class="navbar-brand" href="/">SAMM<span>Search Festival</span></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
 				data-target="#ftco-nav" aria-controls="ftco-nav"
 				aria-expanded="false" aria-label="Toggle navigation">
