--- a/samm/src/main/resources/templates/board.html
+++ b/samm/src/main/resources/templates/board.html
@@ -1,28 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Pacific - Free Bootstrap 4 Template by Colorlib</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Arizonia&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
-  <link rel="stylesheet" href="css/animate.css">
-  
-  <link rel="stylesheet" href="css/owl.carousel.min.css">
-  <link rel="stylesheet" href="css/owl.theme.default.min.css">
-  <link rel="stylesheet" href="css/magnific-popup.css">
-
-  <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-  <link rel="stylesheet" href="css/jquery.timepicker.css">
-
-  
-  <link rel="stylesheet" href="css/flaticon.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
 
 <script>
 function goDetail(bno){
@@ -30,16 +5,41 @@ function goDetail(bno){
 	location.href='/board/detail?bno='+bno; 
 };
 </script>
-<body>
 
+<style>
+.blog-list{
+	width:inherit;
+}
 
+.contents-box{
+    word-break: break-all;
+}
+</style>
+
+<section class="hero-wrap hero-wrap-2 js-fullheight"
+	style="background-image: url('images/festival6.jpg');">
+	<div class="overlay"></div>
+	<div class="container">
+		<div
+			class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
+			<div class="col-md-9 ftco-animate pb-5 text-center">
+				<p class="breadcrumbs">
+					<span class="mr-2"><a href="index.html">Home <i
+							class="fa fa-chevron-right"></i></a></span> <span>Board <i
+						class="fa fa-chevron-right"></i></span>
+				</p>
+				<h1 class="mb-0 bread">Board</h1>
+			</div>
+		</div>
+	</div>
+</section>
 
 
 <section class="ftco-section">
   <div class="container">
     <div class="row d-flex" >
       <div class="col-md-4 d-flex ftco-animate" th:each="b:${blist}">
-       <div class="blog-entry justify-content-end">
+       <div class="blog-entry justify-content-end blog-list">
         <a href="blog-single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
         </a>
         <div class="text">
@@ -52,9 +52,11 @@ function goDetail(bno){
            <span class="mos">September</span>
          </div>
        </div>
+       <div class="contents-box">
        <h3 class="heading" th:text="${b.title}"><a href="#">title</a></h3>
-       <div th:text="${b.content}">content</div>
+       <P th:utext="${b.content}">content</P>
        <p><a href="#" class="btn btn-primary">Read more</a></p>
+       </div>
      </div>
    </div>
  </div>
@@ -79,27 +81,3 @@ function goDetail(bno){
 </div>
 </section>	
 
-
-
-
-<!-- loader -->
-
-
-<script src="js/jquery.min.js"></script>
-<script src="js/jquery-migrate-3.0.1.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/jquery.waypoints.min.js"></script>
-<script src="js/jquery.stellar.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/jquery.animateNumber.min.js"></script>
-<script src="js/bootstrap-datepicker.js"></script>
-<script src="js/scrollax.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-<script src="js/google-map.js"></script>
-<script src="js/main.js"></script>
-
-</body>
-</html>
