--- a/samm/src/main/resources/templates/center.html
+++ b/samm/src/main/resources/templates/center.html
@@ -17,6 +17,9 @@
 		</div>
 	</div>
 </div>
+<div class="container">
+<h2 class="festival--subject md-4">진행중인 축제</h2>
+</div>
 <div class="container areacode">
 	<form>
 		<ul class="navbar-nav area--ul">
@@ -29,9 +32,9 @@
 	</form>
 </div>
 
-<section class="ftco-section2">
+<section class="ftco-section2 festival-section2" >
 	<div class="container">
-		<h2 class="festival--subject">현재 진행중인 축제</h2>
+		
 		<div class="row" id="festivalING">
 			<div class="col-md-4 ftco-animate" th:each="list:${festival}">
 				<div class="project-wrap">
