--- a/samm/src/main/resources/static/css/detail.css
+++ b/samm/src/main/resources/static/css/detail.css
@@ -1,91 +1,230 @@
-.detail-navbar{
+.detail-navbar {
 	display: flex;
 	justify-content: space-around;
+	padding: 0px;
+	border-top: 1px solid black;
+	border-bottom: 1px solid black;
 }
 
+.menufixed {
+	top: 89px !important;
+	position: fixed;
+	z-index: 99;
+	left: 0;
+	right: 0;
+	background: white;
+	animation: down 0.5s ease;
+}
+
+@media ( max-width : 992px) {
+	.menufixed {
+		top: 73px !important;
+	}
+}
+
+@
+keyframes down { 0%{
+	transform: translateY(-50px)
+}
+
+100
+%
+{
+transform
+:
+translateY(
+0px
+)
+}
+}
 .person {
-    border: 10px solid transparent;
-    margin-bottom: 25px;
-    width: 80%;
-    height: 80%;
-    opacity: 0.7;
-  }
-  .person:hover {
-    border-color: #f1f1f1;
-  }
-  .carousel-inner img {
-    width: 100%; 
-    margin: auto;
-  }
-  .carousel-caption h3 {
-    color: #fff !important;
-  }
-  @media (max-width: 600px) {
-    .carousel-caption {
-      display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
-    }
-  }  
-  
-#dmap{
-  	width: 100%;
-  	height: 500px;
-  	margin-top:100px;
+	border: 10px solid transparent;
+	margin-bottom: 25px;
+	width: 80%;
+	height: 80%;
+	opacity: 0.7;
 }
 
-.hidden{
-	display:none;
-	
+.person:hover {
+	border-color: #f1f1f1;
 }
 
-.detail-header{
-	display:flex;
-	flex-direction:column;
+.carousel-inner img {
+	margin: auto;
+}
+
+.carousel-caption h3 {
+	color: #fff !important;
+}
+
+@media ( max-width : 600px) {
+	.carousel-caption {
+		display: none;
+		/* Hide the carousel text when the screen is less than 600 pixels wide */
+	}
+}
+
+#dmap {
+	width: 100%;
+	height: 500px;
+	margin-top: 100px;
+}
+
+.hidden {
+	display: none;
+}
+
+.detail-header {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding-bottom: 15px;
+}
+
+.detail-title {
+	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
-.header--info{
-	margin-top:20px;
-	display:flex;
-	justify-content:center;
-	text-align: center;
-	
+.detail-title h1 {
+	font-weight: bold;
+	padding-bottom: 20px;
 }
 
-.review-star{
+.detail-basicInfo {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.detail-basicInfo:last-child {
+	margin-left: 15px;
+	border-left: 1px solid black;
+	color: red;
+}
+
+.festival-addr1 {
+	padding: 0 15px;
+}
+
+.detail-icon {
+	margin-top: 20px;
+	margin-left: 50px;
+}
+
+.dicon {
+	margin-left: 20px;
+}
+
+.header--info {
+	margin-top: 20px;
+	display: flex;
+	justify-content: center;
+	text-align: center;
+}
+
+.review-star {
 	font-size: 1.2em;
 	border-color: #fd7e14;
 }
+
 .fa-star:hover {
 	cursor: pointer;
 }
 
 .filebox input[type="file"] {
-    position: absolute;
-    width: 0;
-    height: 0;
-    padding: 0;
-    overflow: hidden;
-    border: 0;
+	position: absolute;
+	width: 0;
+	height: 0;
+	padding: 0;
+	overflow: hidden;
+	border: 0;
 }
-
 
 .filebox label {
-    display: flex;
-    justify-content:flex-end;
-    padding: 10px 20px;
-    color: black;
-    vertical-align: middle;
-    cursor: pointer;
-    height: 40px;
-    margin-bottom: 30px;
-    font-size: 1.8em;
-    font-weight: 400;
+	display: flex;
+	justify-content: center;
+	flex-direction: column; padding : 10px 20px;
+	vertical-align: middle;
+	cursor: pointer;
+	margin-bottom: 50px;
+	padding: 10px 20px;
 }
 
-.filebox label:hover{
+.filebox label:hover {
 	color: #fd7e14;
 }
 
+.file-span {
+	position: absolute;
+	display: block;
+	padding: 5px 0 0 51px;
+	font-size: 21px;
+	color: white; font-weight : 300;
+	text-align: left;
+	letter-spacing: -1px;
+	font-weight: 300;
+}
 
+#file-form {
+	margin-top: 50px;
+	padding: 0 20px;
+}
 
+.heart, .share:hover {
+	cursor: pointer;
+}
+
+.heart {
+	color: #f52e55;
+}
+
+.heart, .share {
+	font-size: 1.4em;
+}
+
+.modal-title2 {
+	flex-direction: row-reverse;
+}
+
+.mbody1 {
+	display: flex;
+	justify-content: space-around;
+	padding-bottom: 0px;
+}
+
+.icon-text {
+	font-size: 15px;
+	display: block;
+}
+
+.share-icon-i {
+	display: flex;
+	justify-content: center;
+	padding-bottom: 10px
+}
+
+.share-icon {
+	font-size: 50px;
+}
+
+.fsatus {
+	font-size: 15px;
+	font-weight: 400;
+	color: white;
+	background-color: #fd7e14;
+	padding: 6px 15px;
+	border-radius: inherit;
+}
+
+.festival-status {
+	display: flex;
+	justify-content: center; border-radius : 10px;
+	margin-bottom: 30px;
+	border-radius: 10px;
+}
+
+.control-opacity {
+	opacity: 0;
+}
