--- a/samm/src/main/resources/static/css/style.css
+++ b/samm/src/main/resources/static/css/style.css
@@ -9023,7 +9023,9 @@ h1, h2, h3, h4, h5,
     padding-left: 15px;
     padding-right: 15px;
     background: #33313b; }
-
+.project-wrap .text h3 a:hover{
+	color:#fd7e14;
+}
 .services {
   -moz-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
